<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.my_caliculator.srinivas.my_caliculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minHeight="50dp"
        android:gravity="center|right"
        android:id="@+id/resultText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlus"
        android:id="@+id/plusButton"
        android:layout_alignTop="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="_"
        android:id="@+id/minusButton"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        android:id="@+id/intoButton"
        android:layout_alignTop="@+id/minusButton"
        android:layout_alignStart="@+id/button3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:id="@+id/button1"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/button2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button3"
        android:layout_toEndOf="@+id/plusButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:id="@+id/button3"
        android:layout_below="@+id/intoButton"
        android:layout_alignStart="@+id/button9"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_alignStart="@+id/button1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:id="@+id/button5"
        android:layout_below="@+id/button1"
        android:layout_toEndOf="@+id/button1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_alignStart="@+id/button3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn7"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_toStartOf="@+id/button5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn8"
        android:id="@+id/button8"
        android:layout_below="@+id/button4"
        android:layout_toEndOf="@+id/button7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn9"
        android:id="@+id/button9"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/equalsButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn0"
        android:id="@+id/button0"
        android:layout_below="@+id/button7"
        android:layout_toEndOf="@+id/button7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalsBtn"
        android:id="@+id/equalsButton"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divBtn"
        android:id="@+id/divButton"
        android:layout_alignBottom="@+id/button0"
        android:layout_toStartOf="@+id/button0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearBtn"
        android:id="@+id/clearButton"
        android:layout_below="@+id/button0"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
